# catalogue-data

./: .gitIgnore  README.adoc  pyproject.toml
.github/workflows/: pr.yaml  push.yaml
data/: _idn-dc.ttl  _system-catalog.ttl
data/_background/: agents.ttl  catalogues.ttl  dcat-labels.ttl  features.ttl  geo-labels.ttl  geo11-labels.ttl  idn-identifier-datatypes.ttl  idn-role-codes-labels.ttl  idn-th-labels.ttl  idncp-identifier-datatypes.ttl  other-catalogues.ttl
data/_background-resources/: identifier-datatypes.ttl
data/agents/: _idn-ac.ttl  agents-resources.ttl  agents.ttl
data/democat/: AAC-SA.ttl  ADB.ttl  ATSIDA.ttl  ATSISSUB.ttl  BMKKI.ttl  BSA.ttl  CFM3-db86.ttl  ILOC.ttl  MAYIK.ttl  NBPA.ttl  NCIG.ttl  NNTT.ttl  PBCS.ttl  TARRD.ttl  WALD.ttl
data/isucat/: ATNS.ttl
data/ontologies/: identifier-datatypes.ttl
data/resources/: AAC-SA.ttl  AAC.ttl  ADB.ttl  AGENTSDB.ttl  AGIL.ttl  AIATSISIG.ttl  ANUARC.ttl  ANUCOL.ttl  ANUORC.ttl  ANUTHES.ttl  ARIES.ttl  ATNS.ttl  ATSICAC.ttl  ATSICCP.ttl  ATSICR.ttl  ATSICZ.ttl  ATSIDA.ttl  ATSIDA2.ttl  ATSISPN.ttl  ATSISSUB.ttl  AUSLANG.ttl  BMKKI.ttl  BSA.ttl  CFM3-db86.ttl  CGA.ttl  CHPBQ.ttl  CTGIR.ttl  DATA40.ttl  DBA.ttl  DCEN.ttl  DECUTS.ttl  DUALPN.ttl  EXIA.ttl  GDPGPI.ttl  HCCDA.ttl  IARE.ttl  IBLADE.ttl  ILOC.ttl  ILSI.ttl  ILUAB.ttl  (+34 more)
data/system/: _idn-dc.ttl  _system-catalog.ttl  catalog-isu.ttl  catalog-system.ttl  idn-prez-profile.ttl
data/unpublished/: bc-labels.ttl  catalogues.ttl  lc-institution-notices.ttl  tk-labels.ttl
scripts/: ont-tidy.py  update.py  upload.py  validate.py
(+352 files in other folders)
